--- a/code/glucocheck/homepage/templates/account/glucose.html
+++ b/code/glucocheck/homepage/templates/account/glucose.html
@@ -1,11 +1,10 @@
 {% load static %}
-<img src="{% static 'images/arrow.png' %}">
-<h3>Add values here</h3>
 
-<p>Click below to add Carbs value</p>
-<a class="btn btn-primary" href="{% url 'carbs_input'%}">Carb Input Form</a>
-<p>Click below to add Insulin value</p>
-<a class="btn btn-primary" href="{% url 'insulin_input'%}">Insulin Input Form</a>
 
+<p>Click <a href="{% url 'carbs_input'%}">here</a> to add Carbs value<br>
+    Or<br>
+    Click <a href="{% url 'insulin_input'%}">here</a> to add Insulin value</p>
+
+    <img src="{% static 'images/gluco.svg' %}">
 
 
