--- a/code/glucocheck/homepage/templates/account/signup_extra.html
+++ b/code/glucocheck/homepage/templates/account/signup_extra.html
@@ -1,5 +1,5 @@
 {% load static %}
-<img src="{% static 'images/arrow.png' %}">
-<h3>Do you have an account?</h3>
+<h2>One of us?</h2>
 <p>Click below to login to your account</p>
 <a class="btn btn-primary" href="{% url 'login'%}">LOG IN</a>
+<img src="{% static 'images/login.svg' %}">
