--- a/code/glucocheck/homepage/templates/form/form.html
+++ b/code/glucocheck/homepage/templates/form/form.html
@@ -9,16 +9,18 @@
 {% block title %}{{page_title}}{% endblock %}
 
 {% block content %}
+	<body class="body">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-10 offset=md-1">
-				<div class="row">
-					<div class="col-md-5 register-left">
+			<div class="forms-container">
+					<div class="signin-signup">
+
+					
+					<div class="register-left">
 						{% if additional_html %}
 							{% include additional_html %}
 						{% endif %}
 					</div>
-					<div class="col-md-7 register-right">
+					<div class="register-right">
 						<h2>{{form_title}}</h2>
 						<form action="" method="post">
 						{% csrf_token %}
@@ -29,17 +31,21 @@
 									<div class="form-group">{{field}}</div>
 								{% endfor %}
 							{% endfor %}
+
+						
 							<input type="submit" class="btn btn-primary" value={{submit_value}}>
+							
 							{% for form in forms %}
 								{% for name, error in form.errors.items %}
 									{{error}}
 								{% endfor %}
 							{% endfor %}
 						</div>
+						
 						</form>
 					</div>
-				</div>    
+				</div>
 			</div>
-		</div>
 	</div>
+</body>
 {% endblock %}
