--- a/code/glucocheck/homepage/templates/account/login_extra.html
+++ b/code/glucocheck/homepage/templates/account/login_extra.html
@@ -1,8 +1,10 @@
 {% load static %}
 
-<h2>New here?</h2>
-<p>Click below to create new account</p>
+
+<p><h2>New here?</h2><br>
+    Click below to create new account<br>
 <a class="btn btn-primary" href="{% url 'signup' %}">SIGN UP</a>
+</p>
 <a class="forgot" href="{% url 'email_input' %}">Forgot Password?</a>
 
 <img src="{% static 'images/signup.svg' %}">
