--- a/code/glucocheck/homepage/templates/account/profile.html
+++ b/code/glucocheck/homepage/templates/account/profile.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% csrf_token %}
-<img src="{% static 'images/arrow.png' %}">
+<img src="{% static 'images/editprofile.svg' %}">
 <h3>Update profile</h3>
 
 
