--- a/code/glucocheck/homepage/templates/account/signup_extra.html
+++ b/code/glucocheck/homepage/templates/account/signup_extra.html
@@ -1,5 +1,7 @@
 {% load static %}
-<h2>One of us?</h2>
-<p>Click below to login to your account</p>
+
+<p><h2>One of us?</h2><br>
+    Click below to login to your account<br>
 <a class="btn btn-primary" href="{% url 'login'%}">LOG IN</a>
+</p>
 <img src="{% static 'images/login.svg' %}">
