--- a/code/glucocheck/homepage/static/homepage/style.css
+++ b/code/glucocheck/homepage/static/homepage/style.css
@@ -7,10 +7,23 @@
 #header{
     height: 100vh;
     width: 100%;
-    background-image: url(../images/homepagegluco.jpg);
+    background-image: url(../images/homepagegluco2.png);
     background-position:center;
     background-size: cover;
 }
+
+body::-webkit-scrollbar {
+    width: 0.50rem;
+      height: 0.6rem;
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: #fab3c4;
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background: #6649b8;
+  }
 
 .navbar{
     width: 70%;
@@ -40,15 +53,16 @@
     text-decoration: none;
     color: #262261;
     font-family: 'Quicksand', sans-serif;
-    font-size: 15px;
+    font-size: 18px;
+    font-weight: 500;
 }
 
 
 .navbar ul li::after{
     content: '';
-    height: 1px;
+    height: 2px;
     width: 0%;
-    background: #8cc63e;
+    background: #fab3c4;
     position: absolute;
     left: 0;
     bottom: -3px;
@@ -169,9 +183,9 @@
 /*------footer--------*/
 
 #footer{
-    padding: 50px 0 50px;
-    margin-right: 80px;
-    margin-left: 80px;
+    padding: 0 30px 30px;
+    
+    background-color: #FCF5F5;
 }
 .container.footer-row hr{
     width: 100%;
@@ -184,6 +198,8 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-right: 80px;
+    margin-left: 80px;
 }
 
 .footer-left-col{
