--- a/code/glucocheck/homepage/templates/homepage/homepage.html
+++ b/code/glucocheck/homepage/templates/homepage/homepage.html
@@ -17,11 +17,11 @@
             <div class="navbar">
                 <img src="{% static 'images/glucochecklogo.png' %}" class="logo">
                 <ul>
-                    <li><a href="{% url 'homepage' %}">HOME</a></li>
-                    <li><a href="{% url 'dashboard' %}">DASHBOARD</a></li>
-                    <li><a href="#">ABOUT US</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                    <li><a href="#">GETTING STARTED</a></li>
+                    <li><a href="{% url 'homepage' %}">Home</a></li>
+                    <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Getting started</a></li>
                     <li><a href="{% url 'login' %}">{{account_nav}}</a></li>
                 </ul>
          
