--- a/code/glucocheck/homepage/templates/account/glucose.html
+++ b/code/glucocheck/homepage/templates/account/glucose.html
@@ -1,9 +1,11 @@
 {% load static %}
 
 
-<p>Click <a href="{% url 'carbs_input'%}">here</a> to add Carbs value<br>
+<p>Click <a href="{% url 'carbs_input'%}">here</a> to add <a href="{% url 'glossary' %}#carbohydrate" class="carbs" data-tooltip="
+    one of the three main nutrients in food. Foods that provide carbohydrate are starches, vegetables, fruits, dairy products and sugars">Carbs</a> value<br>
     Or<br>
-    Click <a href="{% url 'insulin_input'%}">here</a> to add Insulin value</p>
+    Click <a href="{% url 'insulin_input'%}">here</a> to add <a href="{% url 'glossary' %}#insulin" class="insulin" data-tooltip="
+    a hormone that helps the body use glucose for energy. The beta cells of the pancreas make insulin. When the body cannot make enough insulin, it is taken by injection or through use of an insulin pump">Insulin</a> value</p>
 
     <img src="{% static 'images/gluco.svg' %}">
 
