--- a/code/glucocheck/homepage/templates/message/message.html
+++ b/code/glucocheck/homepage/templates/message/message.html
@@ -11,13 +11,13 @@
 <body class="body">
 	<div class="center">
 		<ul>
-			<li>
-				<h3>{{message_title}}</h3><br>
-			</li>
+			
+				<h3>{{message_title}}</h3>
+			
 			{% for line in message_text %}
-				<li>
+				
 					<p>{{line}}</p>
-				</li>
+				
 			{% endfor %}
 		</ul>
 	</div>
