--- a/code/glucocheck/homepage/static/form/style.css
+++ b/code/glucocheck/homepage/static/form/style.css
@@ -233,8 +233,8 @@ left: 0;
 .register-right{
     position: relative;
     margin-top: 160px;
-    margin-left: 600px; 
-    width: 520px;
+    margin-left: 700px; 
+    width: 420px;
     border-radius: 25px;
     border: none;
     background: none;   
@@ -246,7 +246,7 @@ left: 0;
     text-align: center;
     margin-bottom: 20px;
     margin-top: 20px;
-    color: #7069AF;
+    color: #fab3c4;
 }
 
 .register-right p{
@@ -256,7 +256,7 @@ left: 0;
 }
 
 .register-form{
-    padding: 20px;
+    padding: 10px;
     
     
 }
@@ -292,7 +292,7 @@ left: 0;
 
 /*Added CSS for dealing with the CheckBoxLink widget*/
 .row .form-group {
-	height: 38px;
+	height: 28px;
 }
 /*Add padding to the icon column*/
 .row .column {
@@ -305,7 +305,7 @@ left: 0;
 	height: 20px;
 	width: 20px;
 	margin-top: 10px;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 /*Size and center the accompanying text for the CheckBoxLink widget*/
