--- a/code/glucocheck/homepage/static/message/style.css
+++ b/code/glucocheck/homepage/static/message/style.css
@@ -13,30 +13,36 @@
 
 .center {
 	box-sizing: border-box;
-	width: 400px;
-	padding: 20px;
-	display: flex;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 200px;
-	margin-bottom: 200px;
+	width: 600px;
+	height: 600px;
+	padding: 50px;
+	
+	margin-left: 250px;
+	margin-top: 100px;
+	margin-bottom: 400px;
+	align-items: center;
 }
 
 .center ul {
 	list-style-type: none;
 	margin: 0;
-	padding: 0;
+	padding: 100px;
+	text-align: center;
+	margin-left: 350px;
 }
 
 .center ul h3 {
+	left: 250px;
 	width: 300px;
 	font-size: 24px;
-	text-align: center;
+
 	color: #7069AF;
 }
 
 .center ul p {
+	
 	width: 600px;
 	font-size: 18px;
 	color: black;
+	
 }
