--- a/code/glucocheck/homepage/templates/base/base.html
+++ b/code/glucocheck/homepage/templates/base/base.html
@@ -45,7 +45,7 @@
 	{% block footer %}
 	<section id="footer">
 		<div class="container footer-row">
-			<hr>
+			
 			<div class="footer-left-col">
 				<div class="footer-links">
 					<div class="link-title">
@@ -56,8 +56,14 @@
 						<small><a href="{% url 'tnc' %}#hipaa">HIPAA Privacy</a></small>
 					</div>
 					<div class="link-title">
+						<h4>Documentation</h4>
+						<small><a href="{% url 'glossary' %}">Glossary</a></small><br>
+						
+					</div>
+
+					<div class="link-title">
 						<h4>Contact</h4>
-						<small>support@glucocheck.com</small><br><br><br>
+						<small>support@glucocheck.com</small><br>
 						<small>Copyright © 2021 GlucoCheck</small>
 					</div>
 				</div>
