Added placeholder advice statements and edited links in the sidebar for dashboard and analytics

--- a/code/glucocheck/homepage/templates/analytics/index.html
+++ b/code/glucocheck/homepage/templates/analytics/index.html
@@ -37,7 +37,7 @@
                     
                     <div class="nav__list">
                         
-                        <a href="#" class="nav__link active">
+                        <a href="{% url 'dashboard' %}" class="nav__link active">
                             <ion-icon name="speedometer-outline" class="nav__icon"></ion-icon>
                             <span class="nav__name">Dashboard</span>
                         </a>
@@ -57,7 +57,7 @@
                             </ul>
                         </div>
 
-                        <a href="#" class="nav__link">
+                        <a href="{% url 'analytics' %}" class="nav__link">
                             <ion-icon name="stats-chart-outline" class="nav__icon"></ion-icon>
                             <span class="nav__name">Analytics</span>
                         </a>
