--- a/code/glucocheck/homepage/templates/dashboard2/index.html
+++ b/code/glucocheck/homepage/templates/dashboard2/index.html
@@ -37,7 +37,7 @@
                     
                     <div class="nav__list">
                         
-                        <a href="#" class="nav__link active">
+                        <a href="{% url 'dashboard' %}" class="nav__link active">
                             <ion-icon name="speedometer-outline" class="nav__icon"></ion-icon>
                             <span class="nav__name">Dashboard</span>
                         </a>
