Added context graphs for the analytics trend data

--- a/code/glucocheck/homepage/templates/analytics/index.html
+++ b/code/glucocheck/homepage/templates/analytics/index.html
@@ -118,11 +118,14 @@
                 <div class="grid-item two">
                     <h2>Advice</h2>
 					<h4 id='advice_statement'></h4>
+					<h4>Talk with your docter before making any changes</h4>
+					<button onclick="loadAnalyticsContext(true)">Cycle Glucose Context</button>
+					<button onclick="loadAnalyticsContext(false)">Cycle Carb Context</button>
                 </div>
                 <div id='glucose_scatter_plot' class="grid-item three"></div>
-                <div class="grid-item four"></div>
+                <div id='glucose_trend_context' class="grid-item four"></div>
 				<div id='insulin_bar_chart' class="grid-item five"></div>
-				<div class="grid-item six"></div>
+				<div id='carb_trend_context' class="grid-item six"></div>
 				
               </section>
             </section>
