update hyperlinks and advice section

--- a/code/glucocheck/homepage/templates/account/carbs.html
+++ b/code/glucocheck/homepage/templates/account/carbs.html
@@ -1,8 +1,8 @@
 {% load static %}
 
-<p>Click <a href="{% url 'glucose_input'%}">here</a> to add <a href="{% url 'glossary' %}#glucose" class="glucose" data-tooltip="one of the simplest forms of sugar">Glucose</a> value<br>
+<p>Click <a href="{% url 'glucose_input'%}">here</a> to add <a href="{% url 'glossary' %}#glucose" class="glucose" data-tooltip="one of the simplest forms of sugar"><i><u style="color: #fabdc8;">Glucose</u></i></a> value<br>
     Or<br>
     Click <a href="{% url 'insulin_input'%}">here</a> to add <a href="{% url 'glossary' %}#insulin" class="insulin" data-tooltip="
-    a hormone that helps the body use glucose for energy. The beta cells of the pancreas make insulin. When the body cannot make enough insulin, it is taken by injection or through use of an insulin pump">Insulin</a> value</p>
+    a hormone that helps the body use glucose for energy. The beta cells of the pancreas make insulin. When the body cannot make enough insulin, it is taken by injection or through use of an insulin pump"><i><u style="color: #fabdc8;">Insulin</u></i></a> value</p>
 
     <img src="{% static 'images/carbs.svg' %}">
