--- a/code/glucocheck/homepage/templates/account/insulin.html
+++ b/code/glucocheck/homepage/templates/account/insulin.html
@@ -2,9 +2,9 @@
 
 
 
-<p>Click <a href="{% url 'glucose_input'%}">here</a> to add <a href="{% url 'glossary' %}#glucose" class="glucose" data-tooltip="one of the simplest forms of sugar">Glucose</a> value<br>
+<p>Click <a href="{% url 'glucose_input'%}">here</a> to add <a href="{% url 'glossary' %}#glucose" class="glucose" data-tooltip="one of the simplest forms of sugar"><i><u style="color: #fabdc8;">Glucose</u></i></a> value<br>
     Or<br>
     <p>Click <a href="{% url 'carbs_input'%}">here</a> to add <a href="{% url 'glossary' %}#carbohydrate" class="carbs" data-tooltip="
-        one of the three main nutrients in food. Foods that provide carbohydrate are starches, vegetables, fruits, dairy products and sugars">Carbs</a> value<br>
+        one of the three main nutrients in food. Foods that provide carbohydrate are starches, vegetables, fruits, dairy products and sugars"><i><u style="color: #fabdc8;">Carbs</u></a> value<br>
 
     <img src="{% static 'images/insulin.svg' %}">
