--- a/code/glucocheck/homepage/templates/account/profile.html
+++ b/code/glucocheck/homepage/templates/account/profile.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% csrf_token %}
-<h3>Update profile</h3>
+<h3>Update your profile</h3>
 <img src="{% static 'images/editprofile.svg' %}">
 
 
