--- a/code/glucocheck/homepage/templates/analytics/index.html
+++ b/code/glucocheck/homepage/templates/analytics/index.html
@@ -118,7 +118,7 @@
                 <div class="grid-item two">
                     <h2>Advice</h2>
 					<h4 id='advice_statement'></h4>
-					<h4>Talk with your docter before making any changes</h4>
+					<h4><i><u>" Talk with your docter before making any changes "</u></i></h4>
 					<button onclick="loadAnalyticsContext(true)">Cycle Glucose Context</button>
 					<button onclick="loadAnalyticsContext(false)">Cycle Carb Context</button>
                 </div>
