--- a/code/glucocheck/homepage/static/dashboard/styles.css
+++ b/code/glucocheck/homepage/static/dashboard/styles.css
@@ -390,3 +390,12 @@ a{
 
 
 
+.drp-buttons .cancelBtn btn btn-sm btn-default{
+
+  background-color: #7069AF;
+}
+
+.drp-buttons .applyBtn btn btn-sm btn-primary{
+
+  background-color: #7069AF;
+}
