Added the api documentation to all footers (I think) Minor cosmetic changes to the carb context graph Changed dates in the demo_workflow to todays date

--- a/code/glucocheck/homepage/templates/dashboard2/index.html
+++ b/code/glucocheck/homepage/templates/dashboard2/index.html
@@ -191,7 +191,7 @@
                     <div class="link-title">
 						<h4>Documentation</h4>
 						<small><a href="{% url 'glossary' %}">Glossary</a></small><br>
-						
+						<small><a href="/api-document/">API Documentation</a></small>
 					</div>
 
 					<div class="link-title">
