--- a/code/glucocheck/homepage/templates/analytics/index.html
+++ b/code/glucocheck/homepage/templates/analytics/index.html
@@ -188,11 +188,20 @@
 						<small><a href="{% url 'tnc' %}#cookie">Cookie Policy</a></small><br>
 						<small><a href="{% url 'tnc' %}#hipaa">HIPAA Privacy</a></small>
 					</div>
+
+                    <div class="link-title">
+						<h4>Documentation</h4>
+						<small><a href="{% url 'glossary' %}">Glossary</a></small><br>
+						<small><a href="/api-document/">API Documentation</a></small>
+					</div>
+
 					<div class="link-title">
 						<h4>Contact</h4>
-						<small>support@glucocheck.com</small><br><br><br>
+						<small>support@glucocheck.com</small><br>
 						<small>Copyright © 2021 GlucoCheck</small>
 					</div>
+
+                    
 				</div>
 			</div>
 			<div class="footer-right-col">
